@@ -2,6 +2,8 @@
     1. HandEvaluator class added. Currently evaluates for straights and flushes.
     2. 'card.setName()' in DeckOfCards -> buildDeck removed due to issues regarding Jokers. Cards currently no longer
         have names.
+    3. Method added to HandEvaluator to check for pairs, trips, and quads in a hand. It currently counts fpr multiples of
+       every card. It does not yet determine the final hand rank.
 
 12/27/2020
     1. Minor class changes. user's name is now set in ConsoleMenu and the player object gets it.
